[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/enemies/Turret.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/turret.png" type="Texture" id=2]
[ext_resource path="res://entities/Balls/Turret_Ball.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 32 )

[sub_resource type="CircleShape2D" id=1]
radius = 251.287

[node name="Turret" type="StaticBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )
turret_ball_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( -1, -33 )

[node name="Timer" type="Timer" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
scale = Vector2( 1.00192, 1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
